[package]
name = "boss-cli"
description = "The crate for boss"
version = "0.6.1"
edition = "2021"
authors = ["Noah <noahbuergler@proton.me"]
license = "GPL 3.0"
repository = "https://github.com/NQMVD/boss-cli"
documentation = "https://docs.rs/boss-cli"
keywords = ["cli"]
categories = ["command-lineutilities"]

[[bin]]
name = "boss"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["cargo"] }
cliclack = "0.2.5"
console = "0.15.8"
log = "0.4.22"
simplelog = "0.12.2"
strp = "1.1.2"
