[package]
name = "boss-cli"
description = "◇ The boss of package management."
version = "0.6.2"
edition = "2021"
authors = ["Noah <noahbuergler@proton.me"]
license = "GPL-3.0-or-later"
repository = "https://github.com/NQMVD/boss"
documentation = "https://docs.rs/boss-cli"
keywords = ["cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "boss"
path = "boss/src/main.rs"

[dependencies]
clap = { version = "4.5.7", features = ["cargo"] }
cliclack = "0.2.5"
console = "0.15.8"
log = "0.4.22"
simplelog = "0.12.2"
strp = "1.1.2"
